test/expected/help-error.out
cdecl> help foo
            ^
3,6: error: "foo": no such command or option
cdecl> 
cdecl> help class
            ^
5,6: error: "class": not supported in C
cdecl> help const
            ^
6,6: error: "const": not supported in C
cdecl> help const cast
            ^
7,6: error: "const cast": not supported in C
cdecl> help dynamic
            ^
8,6: error: "dynamic": not supported in C
cdecl> help dynamic cast
            ^
9,6: error: "dynamic cast": not supported in C
cdecl> help inline
            ^
10,6: error: "inline": not supported in C
cdecl> help namespace
            ^
11,6: error: "namespace": not supported in C
cdecl> help reinterpret
            ^
12,6: error: "reinterpret": not supported in C
cdecl> help reinterpret cast
            ^
13,6: error: "reinterpret cast": not supported in C
cdecl> help static
            ^
14,6: error: "static": not supported in C
cdecl> help static cast
            ^
15,6: error: "static cast": not supported in C
cdecl> help using
            ^
16,6: error: "using": not supported in C
